--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap');
+@import "react-alice-carousel/lib/alice-carousel.css";
+
 
 body {
   margin: 0;
